--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <name>Tool</name>
     <groupId>com.babyelephantdevelopers</groupId>
     <artifactId>TestingTool</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,10 +24,12 @@
 
 
     <build>
+
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
+                    <finalName>TestingTool</finalName>
                     <archive>
                         <manifest>
                             <mainClass>com.babyelephantdevelopers.Main</mainClass>
